k8s/backend-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: backend-user
  name: backend-user
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend-user
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/udagram: "true"
        io.kompose.service: backend-user
    spec:
      containers:
        - env:
            - name: AWS_BUCKET
              value: udagram-esiea-123456
            - name: AWS_PROFILE
              value: default
            - name: AWS_REGION
              value: us-east-1
            - name: JWT_SECRET
              value: testing
            - name: POSTGRES_DB
              value: udagram
            - name: POSTGRES_HOST
              value: udagram-db
            - name: POSTGRES_PASSWORD
              value: udagram
            - name: POSTGRES_USERNAME
              value: udagram
            - name: URL
              value: http://localhost:8100
          image: nebulosus/udagram-api-user
          name: backend-user
          resources: {}
      restartPolicy: Always
status: {}
