k8s/reverseproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: reverseproxy
  name: reverseproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: reverseproxy
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/udagram: "true"
        io.kompose.service: reverseproxy
    spec:
      containers:
        - image: nebulosus/reverseproxy
          name: reverseproxy
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
