k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - name: "8100"
      port: 8100
      targetPort: 80
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
